# doorlook

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  STRUCTURE.md
backend/: pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/: router.py
backend/app/api/endpoints/: ask_openai.py
